[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cidrscan"
version = "0.1.0"
description = "Ping-scan all IPs in a CIDR block from the command line"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "textual>=0.60",
]

[project.scripts]
cidrscan = "cidrscan.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/cidrscan"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
strict = true
files = ["src/"]
